header z-index change - fix for mobile dropdowns - network and language

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -4,7 +4,7 @@ header {
   width: 100%;
   background-color: var(--background-header);
   border-bottom: 1px solid var(--background-menu);
-  z-index: 5;
+  z-index: 7;
   transition: background-color .5s;
   .header-logo {
     max-width: 150px;
